[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/GDialog/Images/Context Menus/Remove.svg" type="Texture" id=1]
[ext_resource path="res://addons/GDialog/Editor/Events/Parts/ResourcePickers/File/FilePicker.gd" type="Script" id=2]
[ext_resource path="res://addons/GDialog/Editor/Events/styles/MenuButtonHover.tres" type="StyleBox" id=4]
[ext_resource path="res://addons/GDialog/Editor/Events/styles/MenuButtonNormal.tres" type="StyleBox" id=5]

[node name="FilePicker" type="HBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileButton" type="Button" parent="."]
margin_right = 86.0
margin_bottom = 22.0
custom_styles/hover = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "Select File"

[node name="ClearButton" type="Button" parent="."]
margin_left = 90.0
margin_right = 118.0
margin_bottom = 22.0
disabled = true
icon = ExtResource( 1 )
[connection signal="pressed" from="FileButton" to="." method="_on_FileButton_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_ClearButton_pressed"]
